--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,6 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
 
-
     <application
         android:name=".application.MainApp"
         android:allowBackup="true"
@@ -19,6 +18,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/Theme.CamelanTask"
         android:usesCleartextTraffic="false"
+        tools:ignore="GoogleAppIndexingWarning"
         tools:targetApi="m">
         <activity android:name=".BaseActivity" />
         <activity
